--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,20 +1,41 @@
 .backdrop {
-  position: fixed;
+  // position: fixed;
+  // top: 0;
+  // width: 100%;
+  // height: 100%;
+  // padding: 93px 15px;
+  // background-color: rgba(0, 0, 0, 0.2);
+  // transition: opacity var(--transition-time), visibility var(--transition-time);
+  // overflow-y: scroll;
+  @media screen and (min-width: 480px) {
+  position: absolute;
   top: 0;
-  width: 100%;
-  height: 100%;
-  padding: 93px 15px;
+  width: 480px;
+  height: 796px;
+  padding: 93px 15px 94px 15px;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity var(--transition-time), visibility var(--transition-time);
-  overflow-y: scroll;
-  @media screen and (max-width: 576px) {
-  padding: 93px 15px;
+  // overflow-y: scroll;
   }
-  @media screen and (min-width: 577px) {
-  padding: 208px 159px;
+  @media screen and (min-width: 768px) {
+  position: absolute;
+  top: 0;
+  width: 768px;
+  height: 1024px;
+  padding: 208px 159px 207px 159px;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity var(--transition-time), visibility var(--transition-time);
+  // overflow-y: scroll;
   }
-   @media screen and (min-width: 960px) {
-   padding: 222px 536px;
+  @media screen and (min-width: 1200px) {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 1024px;
+  padding-top: 221px 536px;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity var(--transition-time), visibility var(--transition-time);
+  // overflow-y: scroll;
  }
 }
 
@@ -22,10 +43,6 @@
   padding: 40px;
   background-color: var(--primary-bg-color);
   @media screen and (min-width: 480px) {
-  width: 450px;
-  min-height: 609px;
-  }
-  @media screen and (min-width: 577px) {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -34,7 +51,16 @@
   width: 450px;
   min-height: 609px;
   }
-  @media screen and (min-width: 960px) {
+  @media screen and (min-width: 768px) {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scaleX(1);
+  transition: transform var(--transition-time);
+  width: 450px;
+  min-height: 609px;
+  }
+  @media screen and (min-width: 1200px) {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -65,16 +91,17 @@
   cursor: pointer;
   outline-color: var(--accent-color);
   transition: transform var(--transition-time);
-  @media screen and (max-width: 576px) {
-  position: absolute;
-  top: 102px;
-  right: 25px;
-  transition: transform var(--transition-time);
-  }
-  // @media screen and (min-width: 577px) {
+  // @media screen and (min-width: 480px) {
   // position: absolute;
   // top: 8px;
-  // right: 10px;
+  // right: 8px;
+  // transition: transform var(--transition-time);
+  // }
+  // @media screen and (min-width: 768px) {
+  // position: absolute;
+  // top: 8px;
+  // right: 8px;
+  // transition: transform var(--transition-time);
   // }
 }
 
