--- a/sass/layouts/_client.scss
+++ b/sass/layouts/_client.scss
@@ -1,20 +1,38 @@
 .section__client {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding: 94px 0;
   /* background: #F5F5F5; */
-  @media screen and (max-width: 481px) {
-    padding: 60px 0;
+  @media screen and (min-width: 480px) {
+  padding: 60px 0;
+  }
+  @media screen and (min-width: 768px) {
+  padding: 60px 0;
   }
 }
 
-.sectio__title {
-  margin-top: 0;
-  margin-bottom: 50px;
+.section__client__title {
   color: var(--title-text-color);
   font-weight: 700;
+  text-align: center;
+  @media screen and (min-width: 480px) {
+  margin-bottom: 30px;
+  font-size: 28px;
+  text-align: center;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  }
+  @media screen and (min-width: 768px) {
+  margin-bottom: 30px;
+  font-size: 28px;
+  text-align: center;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  }
+  @media screen and (min-width: 1200px) {
+  margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.16;
-  text-align: center;
+  text-align: center; 
+  }
 }
 
 .client.list {
