--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -1,12 +1,12 @@
 .section__features {
-  padding-top: 60px;
-  padding-bottom: 60px;
-
+  @media screen and (min-width: 480px) {
+  padding: 60px 0;
+  }
   @media screen and (min-width: 767px) {
   padding: 60px 0;
   }
   @media screen and (min-width: 1200px) {
-   padding-top: 94px;
+  padding: 94px 0;
   }
  }
  
