--- a/sass/layouts/_work.scss
+++ b/sass/layouts/_work.scss
@@ -100,21 +100,40 @@
 }
 
 .section__work {
-  /* display: inline-block; */
-  padding-top: 94px;
-  padding-bottom: 94px;
   background-color: var(--section-bg-color);
-  @media screen and (max-width: 769px) {
-  padding: 60px 0;
+  @media screen and (min-width: 480px) {
+  padding-bottom: 60px;
+ }
+  @media screen and (min-width: 768px) {
+  padding-bottom: 60px;
+ }
+  @media screen and (min-width: 1200px) {
+  padding-bottom: 94px;
  }
 }
 
-.section__title {
-  margin-top: 0;
-  margin-bottom: 50px;
+.section__work__title {
   color: var(--title-text-color);
   font-weight: 700;
+  @media screen and (min-width: 480px) {
+  padding-top: 60px;
+  margin-bottom: 30px;
+  font-size: 28px;
+  line-height: 1.17;
+  text-align: center;
+   }
+  @media screen and (min-width: 768px) {
+  padding-top: 60px;
+  margin-bottom: 30px;
+  font-size: 28px;
+  line-height: 1.17;
+  text-align: center;
+   }
+  @media screen and (min-width: 1200px) {
+  padding-top: 94px;
+  margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
+   }
 }
