--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -344,7 +344,7 @@ align-items: center;
   margin-left: 276px;
   margin-right: 262px;
   }
-  @media screen and (min-width: 1200px) and (max-width: 1600px) {
+  @media screen and (min-width: 1200px) {
     position: absolute;
     top: 48px;
     left: 100%;
