--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -23,8 +23,8 @@
   padding-left: 15px;
  }
  @media screen and (min-width: 1200px) {
-  width: 100%;
-  height: 80px;
+  // width: 100%;
+  // height: 80px;
   display: flex;
   align-items: center;
   padding-left: 15px;
@@ -181,7 +181,7 @@ padding: 0;
   padding-top: 20px;
   padding-bottom: 10px;
  }
- @media screen and (min-width: 769px) {
+ @media screen and (min-width: 1200px) {
   display: flex;
   flex-direction: column;
   align-content: space-around;
