--- a/sass/layouts/_work.scss
+++ b/sass/layouts/_work.scss
@@ -1,7 +1,15 @@
 .content {
   display: flex;
   justify-content: center;
-  margin-bottom: 30px;
+  @media screen and (min-width: 480px) {
+   margin-bottom: 24px;
+  }
+  @media screen and (min-width: 768px) {
+   margin-bottom: 24px;
+  }
+  @media screen and (min-width: 1200px) {
+   margin-bottom: 30px;
+  }
 }
 
 .social.list {
@@ -70,7 +78,7 @@
 }
 
 .work__text {
-  margin-bottom: 30px;
+  margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.18;
   color: var(--primary-text-color);
@@ -102,12 +110,15 @@
 .section__work {
   background-color: var(--section-bg-color);
   @media screen and (min-width: 480px) {
+  padding-top: 60px;
   padding-bottom: 60px;
  }
   @media screen and (min-width: 768px) {
+  padding-top: 60px;
   padding-bottom: 60px;
  }
   @media screen and (min-width: 1200px) {
+  padding-top: 94px;
   padding-bottom: 94px;
  }
 }
@@ -115,22 +126,19 @@
 .section__work__title {
   color: var(--title-text-color);
   font-weight: 700;
-  @media screen and (min-width: 480px) {
-  padding-top: 60px;
+  @media screen and (min-width: 480px) { 
   margin-bottom: 30px;
   font-size: 28px;
   line-height: 1.17;
   text-align: center;
    }
   @media screen and (min-width: 768px) {
-  padding-top: 60px;
   margin-bottom: 30px;
   font-size: 28px;
   line-height: 1.17;
   text-align: center;
    }
   @media screen and (min-width: 1200px) {
-  padding-top: 94px;
   margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.16;
