--- a/css/main.css
+++ b/css/main.css
@@ -577,12 +577,10 @@ body.modal-open {
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .main-nav {
     width: 100%;
-    padding-left: 15px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .main-nav {
-    width: 100%;
     height: 80px;
     display: flex;
     padding-left: 15px;
@@ -590,8 +588,6 @@ body.modal-open {
 }
 @media screen and (min-width: 1200px) {
   .main-nav {
-    width: 100%;
-    height: 80px;
     display: flex;
     align-items: center;
     padding-left: 15px;
@@ -644,7 +640,7 @@ body.modal-open {
     display: none;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .navigator {
     margin-right: 90px;
   }
@@ -750,9 +746,6 @@ body.modal-open {
   }
 }
 
-.contact {
-  width: 100%;
-}
 @media screen and (max-width: 767px) {
   .contact {
     display: none;
@@ -765,12 +758,13 @@ body.modal-open {
     padding-bottom: 10px;
   }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1200px) {
   .contact {
     display: flex;
     flex-direction: column;
     align-content: space-around;
     flex-wrap: wrap;
+    margin-left: auto;
   }
 }
 
@@ -894,17 +888,36 @@ body.modal-open {
   position: absolute;
   top: 0;
   background-color: var(--primary-bg-color);
-  width: 480px;
-  height: 796px;
+  width: 100vw;
+  height: 100vh;
   padding-top: 21px;
   padding-bottom: 48px;
   padding-left: 25px;
   padding-right: 10px;
 }
+.mobil-menu > .conteiner {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.mobil-menu__top {
+  display: flex;
+  flex-direction: column;
+}
+
+.mobil-menu__bottom {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  margin-top: auto;
+}
 
 .menu-close {
   display: block;
-  margin-left: auto;
+  margin-left: 394px;
+  text-align: left;
   background-color: transparent;
   border: none;
   padding: 0;
@@ -922,7 +935,7 @@ body.modal-open {
 }
 
 .mobil-menu__list {
-  margin-bottom: 302px;
+  margin-bottom: auto;
 }
 
 .mobil-menu__item:not(:first-child) {
@@ -1070,8 +1083,18 @@ body.modal-open {
   }
 }
 
-.content__social {
-  position: relative;
+@media screen and (min-width: 1200px) {
+  .content__social {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__social__tab {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 60px;
+  }
 }
 
 .footer__logo {
@@ -1096,12 +1119,10 @@ body.modal-open {
   color: var(--accent-color);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .footer__logos {
-    width: 154px;
+    text-align: center;
     margin-bottom: 20px;
-    margin-left: 163px;
-    margin-right: 163px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1233,16 +1254,12 @@ body.modal-open {
 
 @media screen and (min-width: 768px) {
   .footer__social {
-    position: absolute;
-    top: 5px;
-    left: 458px;
+    margin-left: 165px;
   }
 }
 @media screen and (min-width: 1200px) {
   .footer__social {
-    position: absolute;
-    top: 0;
-    left: 25%;
+    margin-left: 70px;
   }
 }
 
@@ -1258,9 +1275,7 @@ body.modal-open {
 }
 @media screen and (min-width: 480px) {
   .footer__social-title {
-    width: 146px;
     text-align: center;
-    margin-left: 152px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1335,11 +1350,14 @@ body.modal-open {
   fill: var(--primary-bg-color);
 }
 
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .footer__form__contact {
+    margin-top: 60px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .footer__form__contact {
-    position: absolute;
-    top: 0;
-    left: 50%;
+    margin-left: 93px;
   }
 }
 
@@ -1355,14 +1373,12 @@ body.modal-open {
 }
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .footer__contact__title {
-    margin-top: 60px;
-    margin-left: 122px;
+    text-align: center;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer__contact__title {
-    margin-top: 60px;
-    margin-left: 273px;
+    text-align: center;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1386,7 +1402,8 @@ body.modal-open {
 }
 @media screen and (min-width: 1200px) {
   .footer__contact {
-    align-items: center;
+    display: flex;
+    align-items: flex-end;
   }
 }
 
@@ -1455,20 +1472,10 @@ body.modal-open {
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer__contact__btn {
-    display: flex;
-    align-items: center;
-    margin-left: 276px;
+    margin-left: 265px;
     margin-right: 262px;
   }
 }
-@media screen and (min-width: 1200px) and (max-width: 1600px) {
-  .footer__contact__btn {
-    position: absolute;
-    top: 48px;
-    left: 100%;
-  }
-}
-
 .icon__send {
   width: 24px;
   height: 24px;
@@ -1666,6 +1673,12 @@ body.modal-open {
   line-height: 1.14;
   text-transform: uppercase;
 }
+@media screen and (min-width: 768px) {
+  .features__title {
+    display: flex;
+    justify-content: flex-start;
+  }
+}
 
 .features__text {
   display: inline;
@@ -1677,7 +1690,21 @@ body.modal-open {
 .content {
   display: flex;
   justify-content: center;
-  margin-bottom: 30px;
+}
+@media screen and (min-width: 480px) {
+  .content {
+    margin-bottom: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .content {
+    margin-bottom: 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .content {
+    margin-bottom: 30px;
+  }
 }
 
 .social.list {
@@ -1743,7 +1770,7 @@ body.modal-open {
 }
 
 .work__text {
-  margin-bottom: 30px;
+  margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.18;
   color: var(--primary-text-color);
@@ -1775,16 +1802,19 @@ body.modal-open {
 }
 @media screen and (min-width: 480px) {
   .section__work {
+    padding-top: 60px;
     padding-bottom: 60px;
   }
 }
 @media screen and (min-width: 768px) {
   .section__work {
+    padding-top: 60px;
     padding-bottom: 60px;
   }
 }
 @media screen and (min-width: 1200px) {
   .section__work {
+    padding-top: 94px;
     padding-bottom: 94px;
   }
 }
@@ -1795,7 +1825,6 @@ body.modal-open {
 }
 @media screen and (min-width: 480px) {
   .section__work__title {
-    padding-top: 60px;
     margin-bottom: 30px;
     font-size: 28px;
     line-height: 1.17;
@@ -1804,7 +1833,6 @@ body.modal-open {
 }
 @media screen and (min-width: 768px) {
   .section__work__title {
-    padding-top: 60px;
     margin-bottom: 30px;
     font-size: 28px;
     line-height: 1.17;
@@ -1813,7 +1841,6 @@ body.modal-open {
 }
 @media screen and (min-width: 1200px) {
   .section__work__title {
-    padding-top: 94px;
     margin-bottom: 50px;
     font-size: 36px;
     line-height: 1.16;
