--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -63,6 +63,10 @@
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  @media screen and (min-width: 768px) {
+  display: flex;
+  justify-content: flex-start;
+  }
 }
 
 .features__text {
